--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Android20230315AntonSpaansNYCSchools"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".schools.ui.SchoolActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Android20230315AntonSpaansNYCSchools">
